# pkgtools

./: .gitignore  LICENSE  Makefile.am  README  README.md  acsite.m4  bootstrap  configure.ac
doc/autogen-examples/: auto-clean.sh  bootstrap-cross.sh  bootstrap.sh  configure-cross.sh  configure.sh
doc/dialog/: dialog-1.3-20190211.patch  dialog-1.3-20190724.patch  dialog-1.3-20190728.patch  dialog-1.3-20190808.patch
src/: .dialogrc  Makefile.am  check-db-integrity.c  check-package.c  check-requires.c  chrefs.c  cmpvers.c  cmpvers.h  defs.h  dialog-ui.c  dialog-ui.h  dlist.c  dlist.h  install-package.c  install-pkglist.c  jsmin.c  jsmin.h  make-package.c  make-pkglist.c  make-pkglist.h  msglog.c  msglog.h  pkginfo.c  pkglist.c  pkglist.h  pkglist.html.c  pkglist.html.v3.c  pkglog.c  remove-package.c  system.c  system.h  update-package.c
